# Checkers

./: CMakeLists.txt  main.cpp
include/: game.h
